--- a/frontend/src/pages/AddRestaurant.css
+++ b/frontend/src/pages/AddRestaurant.css
@@ -1,40 +1,62 @@
-
 body {
   font-family: 'Inter';
 }
 
 .container {
-  display: flex;
-  justify-content: center; 
   padding-top: 20px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
+/* autofill button with different states */
 .autofill-button {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 48px; 
   border: none;
-  border-radius: 50px; 
+  border-radius: 24px; 
   background-color: #EA246E; 
   color: white;
   font-weight: 600;
   font-size: 14px; 
   line-height: 22px; 
   cursor: pointer;
-  width: 20%
+  width: 70%;
+}
 
+.autofill-icon {
+  margin-left: 8px; 
 }
 
 .autofill-button:hover {
   background-color: #D32063; 
 }
 
-.autofill-button .icon {
-  width: 50px; 
-  height: 50px; 
+.autofill-button:active {
+  background-color: #BB1D58; 
+
 }
 
+/* autofill succes smessage */
+.autofill-success {
+  display: flex;
+  flex-direction: column;
+  margin-top: 16px;
+  gap: 4px;
+}
+
+.autofill-success img{
+  height: 36px;
+  width: 36px;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+
+}
+
+/* autofill modal */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -51,7 +73,9 @@ body {
   background: #fff;
   border-radius: 16px;
   padding: 24px 24px;
-  max-width: 30%; 
+  width: 280px; 
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-header {
@@ -61,6 +85,7 @@ body {
   font-weight: 600;
 }
 
+/* autofill modal input with different states */
 .modal-input {
   width: 100%;
   height: 48px;
@@ -70,6 +95,7 @@ body {
   box-sizing: border-box;
   outline: none;
   caret-color: #EA246E;
+  color: #9E9E9E;
   margin-top: 24px;
   font-size: 14px;
   line-height: 22px;
@@ -77,15 +103,14 @@ body {
 
 .modal-input:focus {
   border-color: black;
+  color: black;
 }
 
+/* autofill modal button with different states */
 .modal-confirm-button {
-  
-  align-items: center;
-  justify-content: center; 
   height: 48px; 
   border: none;
-  border-radius: 50px; 
+  border-radius: 24px; 
   background-color: #EA246E; 
   color: white;
   font-weight: 600;
@@ -94,4 +119,143 @@ body {
   cursor: pointer;
   width: 100%;
   margin-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.modal-confirm-button:hover {
+  background-color: #D32063; 
+}
+
+.modal-confirm-button:active {
+  background-color: #BB1D58; 
+}
+
+.modal-confirm-button.retrieving {
+  background-color: #F289B5; 
+  cursor: not-allowed;
+}
+
+.modal-confirm-button.disabled {
+  background-color: #E0E0E0; 
+  cursor: not-allowed;
+}
+
+.modal-confirm-button-loader {
+  border: 3px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border-top: 3px solid #fff;
+  width: 18px;
+  height: 18px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* form labels, inputs with different states */
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  padding: 16px;
+}
+
+.form-group {
+  margin-bottom: 16px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 4px;
+  color: #666666;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 8px;
+  border: 2px solid #E0E0E0;
+  border-radius: 4px;
+  font-size: 14px;
+  height: 48px;
+  box-sizing: border-box;
+  outline: none;
+  caret-color: #EA246E;
+  color: #9E9E9E;
+}
+
+.form-group input:focus {
+  border-color: black;
+  color: black;
+} 
+
+.form-group input.error-state {
+  border-color: #D72C0E;
+} 
+
+.error-text {
+  color: #D72C0E;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.normal-text {
+  color: #9E9E9E;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.form-group textarea {  
+  width: 100%;
+  max-width: 100%;
+  padding: 8px;
+  height: 120px;
+  font-family: 'Inter';
+  border: 2px solid #E0E0E0;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 14px;
+  outline: none;
+  caret-color: #EA246E;
+  color: #9E9E9E;
+}
+
+.form-group textarea:focus {
+  border-color: black;
+  color: black;
+} 
+
+/* form: tags input */
+.tag-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.tag {
+  background-color: #FFE2ED;
+  border: 2px solid #ea246e;
+  border-radius: 16px;
+  height: 32px;
+  padding: 5px 10px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 22px;
+  color: #ea246e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:8px;
+}
+
+.tag span {
+  margin-left: 8px;
+  cursor: pointer;
+}
+
