--- a/src/styles.css
+++ b/src/styles.css
@@ -56,3 +56,15 @@ body {
 .toast-custom .Toastify__close-button {
   display: none; 
 }
+
+.no-restaurants-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  color: #EA246E;
+  font-size: 24px;
+  line-height: 40px;
+  font-weight: 600;
+  margin-top: 24px;
+}
